add documentation text and new exploration structure

--- a/data.html
+++ b/data.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Mar 09 2021 22:45:02 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 19 2021 11:27:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6022e4d690e114e006b8ca38" data-wf-site="600ec03352cf05a3da53145c">
 <head>
   <meta charset="utf-8">
@@ -44,18 +44,13 @@
       </div>
     </div>
   </div>
-  <header id="hero-overlay" class="hero-overlay">
-    <div class="centered-container-2 w-container">
-      <h1>Dat Table</h1>
-      <p>This tells you to cite us properly if you use our data set </p>
-      <div>
-        <a href="#" class="w-button">Button text</a>
-      </div>
+  <div class="section-5"></div>
+  <div class="exploretabs">
+    <div>
+      <h1>The biggest dataset of central bank speeches worldwide</h1>
     </div>
-  </header>
-  <div class="section-4" >
-  <iframe src="http://35.246.191.18:5601/app/dashboards#/view/f99a2680-812e-11eb-9e9f-7dc520b36043?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3A'2000-02-19T15%3A42%3A59.217Z'%2Cto%3A'2007-05-29T05%3A47%3A35.316Z'))&show-query-input=true&show-time-filter=true" height="1000" width="100%"></iframe>
   </div>
+  <div class="datatablediv"><img src="images/mika-baumeister-Tz1k07Jl2no-unsplash.jpg" loading="lazy" sizes="(max-width: 2624px) 100vw, 2624px" srcset="images/mika-baumeister-Tz1k07Jl2no-unsplash-p-500.jpeg 500w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-800.jpeg 800w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-1080.jpeg 1080w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-1600.jpeg 1600w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-2000.jpeg 2000w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-2600.jpeg 2600w, images/mika-baumeister-Tz1k07Jl2no-unsplash.jpg 2624w" alt=""></div>
   <div class="section">
     <div class="container">
       <div class="footer-wrap">
