--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Mar 09 2021 22:45:02 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 19 2021 11:27:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="600ec0335d96f052017731f2" data-wf-site="600ec03352cf05a3da53145c">
 <head>
   <meta charset="utf-8">
@@ -46,9 +46,9 @@
   </div>
   <div class="section cc-store-home-wrap">
     <div class="intro-header">
-      <div data-poster-url="videos/MVI_9186-poster-00001.jpg" data-video-urls="videos/MVI_9186-transcode.mp4,videos/MVI_9186-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/MVI_9186-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-          <source src="videos/MVI_9186-transcode.mp4" data-wf-ignore="true">
-          <source src="videos/MVI_9186-transcode.webm" data-wf-ignore="true">
+      <div data-poster-url="videos/MVI_9186-poster-00001.jpg" data-video-urls="videos/ECB_bw.mov" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/MVI_9186-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+          <source src="videos/ECB_bw.mov" data-wf-ignore="true">
+          {% comment %} <source src="videos/MVI_9186-transcode.webm" data-wf-ignore="true"> {% endcomment %}
         </video>
         <div class="intro-content cc-homepage">
           <div class="intro-text">
