--- a/data.html
+++ b/data.html
@@ -45,13 +45,21 @@
     </div>
   </div>
   <div class="section-5"></div>
-  <div class="exploretabs">
-    <div>
-      <h1>The biggest dataset of central bank speeches worldwide</h1>
-    </div>
+  <div class="exploretabs"></div>
+  <main id="main-content" class="main-content">
+    <div class="w-container">
+      <div class="w-richtext">
+        <h2>The biggest dataset of central bank speeches</h2>
+
+  <p>Here you can find the documentation of the dataset. Please cite as: "Düsterhöft (2021) - A global dataset of central bank speeches". 
+  URL: www.centralbankspeeches.com, accessed ... </p>
+  <!--<div class="datatablediv"><img src="images/mika-baumeister-Tz1k07Jl2no-unsplash.jpg" loading="lazy" sizes="(max-width: 2624px) 100vw, 2624px" srcset="images/mika-baumeister-Tz1k07Jl2no-unsplash-p-500.jpeg 500w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-800.jpeg 800w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-1080.jpeg 1080w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-1600.jpeg 1600w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-2000.jpeg 2000w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-2600.jpeg 2600w, images/mika-baumeister-Tz1k07Jl2no-unsplash.jpg 2624w" alt=""></div>
+  \\-->
+        </div>
+     </div>  
   </div>
-  <div class="datatablediv"><img src="images/mika-baumeister-Tz1k07Jl2no-unsplash.jpg" loading="lazy" sizes="(max-width: 2624px) 100vw, 2624px" srcset="images/mika-baumeister-Tz1k07Jl2no-unsplash-p-500.jpeg 500w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-800.jpeg 800w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-1080.jpeg 1080w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-1600.jpeg 1600w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-2000.jpeg 2000w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-2600.jpeg 2600w, images/mika-baumeister-Tz1k07Jl2no-unsplash.jpg 2624w" alt=""></div>
-  <div class="section">
+
+    <div class="section">
     <div class="container">
       <div class="footer-wrap">
         <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"></a>
