--- a/documentation.html
+++ b/documentation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Mar 19 2021 11:27:23 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Mar 20 2021 21:11:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6022e50125abed0850208165" data-wf-site="600ec03352cf05a3da53145c">
 <head>
   <meta charset="utf-8">
@@ -30,10 +30,17 @@
       <div class="menu w-clearfix">
         <nav role="navigation" class="navigation-items w-nav-menu">
           <a href="index.html" class="navigation-item w-nav-link">HOME</a>
-          <a href="exploration.html" class="navigation-item w-nav-link">Exploration</a>
           <a href="data.html" class="navigation-item w-nav-link">Data</a>
           <div class="dropdownwrapper">
-            <a href="contact.html" data-w-id="56b9b94b-85dc-0e24-f7aa-180d7fe317f7" class="navigation-item w-nav-link">ABOUT</a>
+            <a href="exploration.html" data-w-id="56b9b94b-85dc-0e24-f7aa-180d7fe317f7" class="navigation-item w-nav-link">Exploration</a>
+            <div class="div-content">
+              <a href="raw.html" class="navigation-item w-nav-link">Raw</a>
+              <a href="exploration-copy.html" class="navigation-item w-nav-link">Topic</a>
+              <a href="exploration-copy-2.html" class="navigation-item w-nav-link">Sentiment<br>‍</a>
+            </div>
+          </div>
+          <div class="dropdownwrapper">
+            <a href="contact.html" data-w-id="ae8d9652-215c-4226-fb44-6664fde4d528" class="navigation-item w-nav-link">ABOUT</a>
             <div class="div-content">
               <a href="news.html" class="navigation-item w-nav-link">NEWS</a>
               <a href="documentation.html" aria-current="page" class="navigation-item w-nav-link w--current">DOCUMENTATION</a>
