--- a/exploration-copy.html
+++ b/exploration-copy.html
@@ -57,7 +57,9 @@
     <div data-duration-in="300" data-duration-out="100" class="tabs w-tabs">
       <div class="tabs-content w-tab-content">
         <div data-w-tab="Tab 2" class="w-tab-pane w--tab-active">
-          <h1 class="heading-12">2</h1>
+          
+          <iframe src="http://35.246.191.18:5601/app/dashboards#/view/1dec1f50-812c-11eb-9e9f-7dc520b36043?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3A'1990-03-19T07%3A20%3A10.588Z'%2Cto%3Anow))&show-query-input=true&hide-filter-bar=true" height="800" width="100%"></iframe>
+   
         </div>
         <div data-w-tab="Tab 4" class="w-tab-pane">
           <h1>2</h1>
@@ -68,13 +70,13 @@
       </div>
       <div class="tabs-menu w-tab-menu">
         <a data-w-tab="Tab 2" class="tab-link-tab-2 w-inline-block w-tab-link w--current">
-          <div class="text-block-9">Central Bank</div>
+          <div class="text-block-9">Time Series</div>
         </a>
         <a data-w-tab="Tab 4" class="tab-link-tab-2 w-inline-block w-tab-link">
-          <div class="text-block-9">Sentiment</div>
+          <div class="text-block-9">Topic Proportion</div>
         </a>
         <a data-w-tab="Tab 5" class="tab-link-tab-2 w-inline-block w-tab-link">
-          <div class="text-block-9">Topics</div>
+          <div class="text-block-9">Map</div>
         </a>
       </div>
     </div>
