--- a/exploration-copy.html
+++ b/exploration-copy.html
@@ -62,7 +62,7 @@
    
         </div>
         <div data-w-tab="Tab 4" class="w-tab-pane">
-          <h1>2</h1>
+          <iframe src="http://35.246.191.18:5601/app/dashboards#/view/9d97a410-8be3-11eb-aabb-3d736adbf6d1?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3A'1990-03-23T14%3A00%3A04.516Z'%2Cto%3Anow))&show-query-input=true&hide-filter-bar=true" height="800" width="100%"></iframe>
         </div>
         <div data-w-tab="Tab 5" class="w-tab-pane">
           <h1>2</h1>
